<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:text=""
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="45sp"
        android:maxLength="12"
        android:background="@color/bg"
        android:gravity="bottom|right|center_vertical"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/seven"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textSize="45sp"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/eight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textSize="45sp"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/nine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textSize="45sp"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/divide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/divide"
            android:textSize="45sp"
            android:onClick="onOperator"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/four"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="45sp"
            android:onClick="onDigit" />
        <Button
            android:id="@+id/five"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textSize="45sp"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/six"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textSize="45sp"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/mul"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mul"
            android:textSize="45sp"
            android:onClick="onOperator"/>

    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp"
    android:layout_weight="1"
    android:orientation="horizontal"
    >
    <Button
        android:id="@+id/three"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/_3"
        android:textSize="45sp"
        android:onClick="onDigit"/>
    <Button
        android:id="@+id/two"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/_2"
        android:textSize="45sp"
        android:onClick="onDigit"/>
    <Button
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/_1"
        android:textSize="45sp"
        android:onClick="onDigit"
        />
    <Button
        android:id="@+id/sub"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/sub"
        android:textSize="45sp"
        android:onClick="onOperator"/>

</LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp"
    android:layout_weight="1"
    android:orientation="horizontal"
    >
    <Button
        android:id="@+id/decimal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/decimal"
        android:textSize="45sp"
        android:onClick="onDecimal"/>
    <Button
        android:id="@+id/zero"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/_0"
        android:textSize="45sp"
        android:onClick="onDigit"/>
    <Button
        android:id="@+id/clr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/clr"
        android:textSize="25sp"
        android:onClick="onClear"/>
    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/add"
        android:textSize="45sp"
        android:onClick="onOperator"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/eq"
            android:textSize="45sp"
            android:layout_weight="1"
            android:onClick="equal">

        </Button>

    </LinearLayout>


</LinearLayout>




